[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/app/TitleScreen.gd" id="1"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.117647, 0.117647, 0.133333, 1.0)

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -180.0
offset_right = 260.0
offset_bottom = 180.0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Center"]
layout_mode = 2
size_flags_horizontal = 4
text = "白金英雄坛说"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="Menu" type="VBoxContainer" parent="Center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="BtnStart" type="Button" parent="Center/Menu"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)
text = "开始游戏"

[node name="BtnContinue" type="Button" parent="Center/Menu"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)
text = "继续游戏"

[node name="BtnSettings" type="Button" parent="Center/Menu"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)
text = "设置"

[node name="BtnQuit" type="Button" parent="Center/Menu"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)
text = "退出"

[node name="Version" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -18.0
offset_bottom = -14.0
text = "v0.0.0"
horizontal_alignment = 2
vertical_alignment = 2
